--- a/web/src/index.html
+++ b/web/src/index.html
@@ -7,6 +7,7 @@
 	<script src="https://cdn.firebase.com/js/client/2.3.2/firebase.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 	<script src="js/jquery.timer.min.js"></script>
+	<script src="js/notify.min.js"></script>
 </head>
 <body>
 
@@ -15,6 +16,7 @@
 		<div class="">The toilet is: </div>
 		<div class="toilet-status -loading"><img height="45px" src="./img/toilet-emoji.png" alt="spinner"></div>
 		<div class="toiler-timer"></div>
+		<button class="notify-me">Notify me!</button>
 	</div>
 </div>
 
